# serializer version: 1
# name: test_disabled_runtime_reset_contract_snapshot
  dict({
    'config': dict({
      'conditions': list([
        dict({
          'template': '{{ true }}',
          'type': 'template',
        }),
      ]),
      'confirmation': dict({
        'enabled': False,
      }),
      'description': '',
      'enabled': False,
      'icon': 'mdi:bell-outline',
      'id': 'alert_1',
      'monitor': dict({
        'on_change': True,
        'startup': True,
      }),
      'name': 'Alert',
      'notification': dict({
        'message': 'Message',
        'target': dict({
          'entity_id': list([
            'notify.test',
          ]),
        }),
        'title': 'Title',
      }),
    }),
    'state': dict({
      'last_evaluated': '2026-01-01T00:00:00+00:00',
    }),
    'trace': list([
    ]),
  })
# ---
# name: test_save_update_preserves_created_at_and_delete_cleans_owned_state
  dict({
    'conditions': list([
      dict({
        'template': '{{ true }}',
        'type': 'template',
      }),
    ]),
    'confirmation': dict({
      'enabled': False,
    }),
    'created_at': 'created',
    'description': '',
    'enabled': True,
    'icon': 'mdi:bell-outline',
    'id': 'alert_1',
    'monitor': dict({
      'on_change': True,
      'startup': True,
    }),
    'name': 'New',
    'notification': dict({
      'message': 'Message',
      'target': dict({
        'entity_id': list([
          'notify.test',
        ]),
      }),
      'title': 'Title',
    }),
    'updated_at': '<timestamp>',
  })
# ---
